# firebase-push-notification-plugin

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  firebase.json  pyproject.toml
.github/workflows/: tests.yml
demo/: Dockerfile  Dockerfile.demo.yml  acapy-endpoint-http-ws.sh  config.yml  docker-compose.mediator-alice.yml  docker-compose.relay-alice-bob.yml  docker-compose.relay-bob.yml
demo/configs/: alice.yml  bob.yml
docker/: default.yml  plugins-config-example.yml
firebase_push_notification/: __init__.py  definition.py  util.py
firebase_push_notification/v0_1/: __init__.py  manager.py  message_types.py  notification.py  routes.py  util.py
firebase_push_notification/v0_1/handlers/: device_info_handler.py  get_device_info_handler.py  push_notification_handler.py  set_device_info_handler.py
firebase_push_notification/v0_1/messages/: device_info.py  get_device_info.py  push_notification.py  set_device_info.py
firebase_push_notification/v1_0/: __init__.py  manager.py  message_types.py  routes.py
firebase_push_notification/v1_0/handlers/: device_info_handler.py  get_device_info_handler.py  push_notification_ack_handler.py  push_notification_handler.py  set_device_info_handler.py
int/: Dockerfile  Dockerfile.int.yml  README.md  docker-compose.yml  pyproject.toml
int/docker/: Dockerfile.juggernaut.yml  int-testing-default.yml
int/tests/: conftest.py  project.toml  test_device_info.py  test_device_notification.py  test_set_device_info.py
tests/: conftest.py  test_fire.py  test_push_notification_handler.py
(+6 files in other folders)
