[tool.poetry]
name = "firebase-push-notification-int-tests"
version = "1.0.0"
description = "Integration tests for firebase push notifications"
authors = ["Char Howland <char@indicio.tech>", "Adam Burdett <adam@indicio.tech>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
asynctest = "0.13.0"
acapy-client = {git = "https://github.com/Indicio-tech/acapy-client.git", rev = "d2dcbfbe1e34e30ba2a6039610743221ae842a68"}
echo-agent = {git = "https://github.com/Indicio-tech/echo-agent.git", rev = "42988a58590bc7713d0b1aacdd215b3e6145449d", extras=["client"]}
aries-staticagent = ">=0.9.0rc4"
aiohttp = "^3.7.4"
aries-cloudagent = "0.7.3"
requests-mock = "^1.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
